# verifica-distribuidora-cafe

./: .gitignore  .pdm-python  README.md  SECRET.txt  main.py  pyproject.toml
