[tool.poetry]
name = "urllib"
version = "0.1.0"
description = ""
authors = ["Lucas Vieira <lucasdavid.xavier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
